# rust-surreal-db-api

./: .env.example  .gitignore  Cargo.toml  README.md  docs.md
src/: app_config.rs  app_error.rs  macros.rs  main.rs  session.rs  utils.rs
src/api/: mod.rs
src/api/middlewares/: auth_middleware.rs  is_authenticated.rs  mod.rs  require_auth.rs
src/api/routes/: mod.rs  signin.rs  signup.rs  users.rs
src/db/: db.rs
src/db/models/: user.rs
tests/frontend/: index.html  main.js
