[package]
name = "social_media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
surrealdb = "1.0.0"
serde = "1.0.190"
serde_json = "1.0.108"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.50"
async-trait = "0.1.74"